add get model serverless api
