# component/model.go
@@ -442,21 +442,27 @@ func (c *ModelComponent) Show(ctx context.Context, namespace, name, currentUser 
 	if len(finetunes) > 0 {
 		resModel.EnableFinetune = true
 	}
-	// get model serverless endpoint for inference widget
-	resModel.ServerlessEndpoint = c.getServerlessEndpoint(ctx, model.Repository.ID)
 	return resModel, nil
 }
 
-func (c *ModelComponent) getServerlessEndpoint(ctx context.Context, repoID int64) string {
+func (c *ModelComponent) GetServerless(ctx context.Context, namespace, name, currentUser string) (*types.DeployRepo, error) {
 	var endpoint string
-	deploy, _ := c.deploy.GetServerlessDeployByRepID(ctx, repoID)
+	model, err := c.ms.FindByPath(ctx, namespace, name)
+	if err != nil {
+		return nil, fmt.Errorf("failed to find model, error: %w", err)
+	}
+	allow, _ := c.AllowReadAccessRepo(ctx, model.Repository, currentUser)
+	if !allow {
+		return nil, ErrUnauthorized
+	}
+	deploy, _ := c.deploy.GetServerlessDeployByRepID(ctx, model.Repository.ID)
 	if deploy != nil {
 		if len(deploy.SvcName) > 0 && deploy.Status == deployStatus.Running {
 			cls, err := c.cluster.ByClusterID(ctx, deploy.ClusterID)
 			zone := ""
 			provider := ""
 			if err != nil {
-				slog.Warn("Get cluster with error", slog.Any("error", err))
+				return nil, fmt.Errorf("get cluster with error: %w", err)
 			} else {
 				zone = cls.Zone
 				provider = cls.Provider
@@ -468,7 +474,25 @@ func (c *ModelComponent) getServerlessEndpoint(ctx context.Context, repoID int64
 			endpoint = fmt.Sprintf("%s%s.%s", deploy.SvcName, regionDomain, c.publicRootDomain)
 		}
 	}
-	return endpoint
+	resDeploy := types.DeployRepo{
+		DeployID:         deploy.ID,
+		DeployName:       deploy.DeployName,
+		RepoID:           deploy.RepoID,
+		SvcName:          deploy.SvcName,
+		Status:           deployStatusCodeToString(deploy.Status),
+		Hardware:         deploy.Hardware,
+		Env:              deploy.Env,
+		RuntimeFramework: deploy.RuntimeFramework,
+		MinReplica:       deploy.MinReplica,
+		MaxReplica:       deploy.MaxReplica,
+		GitBranch:        deploy.GitBranch,
+		ClusterID:        deploy.ClusterID,
+		SecureLevel:      deploy.SecureLevel,
+		CreatedAt:        deploy.CreatedAt,
+		UpdatedAt:        deploy.UpdatedAt,
+		ProxyEndpoint:    endpoint,
+	}
+	return &resDeploy, nil
 }
 
 func (c *ModelComponent) SDKModelInfo(ctx context.Context, namespace, name, ref, currentUser string) (*types.SDKModelInfo, error) {
